Update README.md, refactoring.